[package]
name = "rust_chat_project"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
colored = "2.1"  # Pour le design
chrono = "0.4"   # Pour l'heure
[package]
name = "rust_chat_project"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
colored = "2.1"  # Pour le design
chrono = "0.4"   # Pour l'heure   
